@@ -5432,17 +5432,20 @@ qqline(I(1:12))
 ## More "rational" as.character() for <octmode> and <hexmode>,
 ## fulfilling the "law"   as.<vector>(x)[j]  ===  as.<vector>(x[j])
 i <- matrix(0:21, 2)
-hi <- as.character(as.hexmode(i))
-oi <- as.character(as.octmode(i))
+FT <- c(FALSE,TRUE); names(FT) <- c("F", "T")
+hiL <- lapply(FT, function(kp) as.character(as.hexmode(i), keepStr = kp))
+oiL <- lapply(FT, function(kp) as.character(as.octmode(i), keepStr = kp))
 stopifnot(exprs = {
-    identical(dim (hi), dim(i))
-    identical(nrow(oi), nrow(i))
+    identical(dim (hiL[["T"]]), dim(i))
+    identical(nrow(oiL[["T"]]), nrow(i))
+    identical(hi <- hiL[["F"]], as.vector(hiL[["T"]])) ; is.null(dim(hi))
+    identical(oi <- oiL[["F"]], as.vector(oiL[["T"]])) ; is.null(dim(oi))
     hi[1:8] == as.character(0:7)
     oi[1:8] == hi[1:8]
   c(nchar(hi)) == rep(1:2, c(16,6))
   c(nchar(oi)) == rep(1:2, c(8,14))
 })
-## as.character.*() methods had used format() previously
+## as.character.*() methods had used format() previously; now by default drop, dim() etc
 
 
 ## within.list() & within.data.frame() assumed setdiff(a, b) to always eval 'b'
